# stl-names

./: .gitignore  README.md  names.txt  pyproject.toml
fonts/: .gitkeep
scripts/: run_batch.py  run_single.py
src/stl_names/: __init__.py  base_builder.py  batch.py  cli_batch.py  cli_single.py  connector.py  exporter.py  font_loader.py  generator.py  mesh_builder.py  outline_builder.py  rounding.py
tests/: test_batch.py  test_connector.py  test_exporter.py  test_ij_dots.py  test_mesh_builder.py  test_outline_builder_size.py  test_rounding.py
