[project]
name = "stl-names"
version = "0.1.0"
description = "Generate 3D-printable STL files of names"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.55",
    "shapely>=2.0",
    "numpy>=1.26",
    "trimesh>=4.4",
    "typer>=0.12",
    "scipy>=1.12",
    "mapbox-earcut>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
stl-single = "stl_names.cli_single:app"
stl-batch = "stl_names.cli_batch:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stl_names"]

[tool.pytest.ini_options]
testpaths = ["tests"]
